            Pico/Wifi: Enabled JIT compiler
            Ensure that if JIT fails, we correctly remove just the "jit" tag and treat the function as normal JS
            nRF52: Add NRF.setAdvertising({},{whenConnected:true}) to allow advertisements to be sent while a connection is active
            nRF52: Fix NRF.getSecurityStatus's 'advertising' field (only appeared when connected previously)

     2v17 : Bangle.js: When reading file info from a filename table, do it in blocks of 8 (20% faster file search)
            Bangle.js2: Increase flash buffer size from 16->32 bytes (5% performance increase)
            ESP32: update esp-idf to v3.3.6
            Bangle.js2: Fix issue where Bangle.getPressure could leave the barometer on
            Bangle.js2: Bootloader update - triple-check CRC after writing firmware and retry if it fails
            Bangle.js2: setUI(updown/leftright) now responds to button on falling (not rising) edge
            If we get an unhandled exception, ensure we keep the stack trace intact
            Array.sort() with undefined elements now puts them at the end of the array (as per spec - #2300)
            Bangle.js1/2: Fix showMenu/showScroller spacing with back if no widgets loaded (ref #2286)
            Bangle.js1: Bangle.setUI({back}) now responds to BTN3 if there were no other watches on buttons
            ESP32: Allow up to 16k vars (if enough memory), allow non-active scan, and remove 30s BLE scan limit
            Graphics: Ensure a scroll inside a cliprect can't go out of bounds (previously it was bounded to screen)
            Puck.js: Fix regression in 2v15/2v16 that stopped Puck.js v1 using magnetometer
            Bangle.js2: Fix scroller overlap with widget bar when scrolled more than the screen's height in one step
            Bangle.js2: Improve touchscreen handling to handle out of range data from the controller on some devices
            Bangle.js: Improve ANCS stability - cancel ongoing tasks if an error is reported