@@ -3,6 +3,7 @@
             Ensure that if JIT fails, we correctly remove just the "jit" tag and treat the function as normal JS
             nRF52: Add NRF.setAdvertising({},{whenConnected:true}) to allow advertisements to be sent while a connection is active
             nRF52: Fix NRF.getSecurityStatus's 'advertising' field (only appeared when connected previously)
+            Fix 'ghosting' issue on Welcome screen (forcing timeout/lcdPower/etc at boot could disable the EXTCOMIN toggle)
 
      2v17 : Bangle.js: When reading file info from a filename table, do it in blocks of 8 (20% faster file search)
             Bangle.js2: Increase flash buffer size from 16->32 bytes (5% performance increase)
